admin and login styling baked in from the start

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -17,6 +17,16 @@
         "styles/editor-style.scss"
       ]
     },
+    "admin.css": {
+      "files": [
+        "styles/admin.scss"
+      ]
+    },
+    "login.css": {
+      "files": [
+        "styles/login.scss"
+      ]
+    },
     "jquery.js": {
       "bower": ["jquery"]
     },
